BB-19993: CSS issues - Fixed CSS issues - Add collapse animation

--- a/src/Oro/Bundle/FrontendBundle/Resources/public/blank/scss/components/filters/_filters-toggle-mode.scss
+++ b/src/Oro/Bundle/FrontendBundle/Resources/public/blank/scss/components/filters/_filters-toggle-mode.scss
@@ -121,7 +121,9 @@
     .filter-criteria {
         display: none;
         margin-top: $filter-toggle-mode-criteria-offset-top;
+        margin-left: $filter-toggle-mode-criteria-offset-left;
         padding: $filter-toggle-mode-criteria-offset-inner;
+        visibility: $filter-toggle-mode-criteria-visibility;
 
         .value-field-frame {
             width: $filter-toggle-mode-criteria-value-field-frame-width;
@@ -155,6 +157,7 @@
 
     .filter-item-label {
         font-size: $filter-toggle-mode-filter-item-label-font-size;
+        line-height: $filter-toggle-mode-filter-item-label-line-height;
         display: inline-block;
 
         @include ellipsis();
