--- a/src/Oro/Bundle/FrontendBundle/Resources/public/blank/scss/variables/filters/filters-config.scss
+++ b/src/Oro/Bundle/FrontendBundle/Resources/public/blank/scss/variables/filters/filters-config.scss
@@ -45,7 +45,7 @@ $align-filter-dropdown-to-right-side: true !default;
 // Filters Dropdown Mode
 $filter-box-dropdown-mode-offset: 10px 0 !default;
 $filter-box-dropdown-mode-in-sticky-offset: auto !default;
-$filter-box-dropdown-mode-inner-offset: 10px 0 0 !default;
+$filter-box-dropdown-mode-inner-offset: 8px 0 0 !default;
 $filter-box-dropdown-mode-background: get-color('additional', 'base') !default;
 $filter-box-dropdown-mode-use-corner: true !default;
 $filter-box-dropdown-mode-corner-position-r: 15px !default;
